force-app/main/default/objects/RFP__c/RFP__c.object-meta.xml
<CustomObject>
    <label>RFP</label>
    <pluralLabel>RFPs</pluralLabel>
    <nameField>
        <label>RFP Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>