force-app/main/default/objects/RFP__c/fields/Decision_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeline__c</fullName>
    <label>Decision Timeline</label>
    <type>Text</type>
    <length>255</length>
</CustomField>