force-app/main/default/objects/RFP__c/fields/Extraction_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Confidence__c</fullName>
    <label>Extraction Confidence</label>
    <description>0-100 reliability score for the extracted data. Low values indicate the document was hard to read (scanned, illegible, or missing info) and a human should verify.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>