force-app/main/default/objects/RFP__c/fields/Extraction_Method__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Method__c</fullName>
    <label>Extraction Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>