force-app/main/default/objects/RFP__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <type>Text</type>
    <length>255</length>
</CustomField>