force-app/main/default/objects/RFP__c/fields/Incumbent_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Vendor__c</fullName>
    <label>Incumbent Vendor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>