force-app/main/default/objects/RFP__c/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <label>Portal URL</label>
    <type>Url</type>
    <description>Link to the contractor portal / document download page, extracted from the ITB email body.</description>
</CustomField>