force-app/main/default/objects/RFP__c/fields/Pursuit_Score__c.field-meta.xml
<CustomField>
    <fullName>Pursuit_Score__c</fullName>
    <label>Pursuit Score</label>
    <description>0-100 score computed by the triage service from extracted characteristics</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>