force-app/main/default/objects/RFP__c/fields/Recommendation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Notes__c</fullName>
    <label>Recommendation Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>