force-app/main/default/objects/RFP__c/fields/Required_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Required_Capabilities__c</fullName>
    <label>Required Capabilities</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>